<resources>
    <string name="app_name">KoshelOK</string>
    <string name="wallet_text">Кошелек 1</string>
    <string name="zero_money">0 ₽</string>
    <string name="income_text">Доход</string>
    <string name="many_money">12000 ₽</string>
    <string name="empty_notes">У вас пока нет записей</string>
    <string name="add_operation">Добавить операцию</string>
    <string name="click">Click</string>
    <string name="settings">Настройки</string>
    <string name="title_name">КошелОК</string>
    <string name="description_logo">Логотип приложения</string>
    <string name="description_welcome_icon">Изображение добро пожаловать</string>
    <string name="title_welcome">Добро пожаловать в КошелОК</string>
    <string name="text_welcome">Тут вы сможете контролировать свои доходы и расходы</string>
    <string name="text_button_google">Войти с помощью Google</string>
    <string name="enter_sum_title">Введите сумму</string>
    <string name="sum_operation">Сумма операции</string>
    <string name="ready_button">ГОТОВО</string>
    <string name="choose_type_operation">Выберите тип операции</string>
    <string name="text_income">Доход</string>
    <string name="text_expense">Расход</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="icon_category_description">Иконка категории</string>
    <string name="farther">Далее</string>
    <string name="new_operation">Новая операция</string>
    <string name="main_operation">Основные</string>
    <string name="edition_settings">Дополнительные настройки</string>
    <string name="data_operation">Дата операции</string>
    <string name="capitalization_text">Капитализация</string>
    <string name="salary_text">Зарплата</string>
    <string name="part_time_text">Подработка</string>
    <string name="present_text">Подарок</string>
    <string name="supermarket_text">Супермаркет</string>
    <string name="fly_text">Полёты</string>
    <string name="jewelry_text">Украшения</string>
    <string name="restaurant">Рестараны</string>
    <string name="replenishment">Пополнение</string>
    <string name="spending">Траты</string>
    <string name="consumption_text">Расход</string>
    <string name="january">%1$s января</string>
    <string name="february">%1$s февраля</string>
    <string name="march">%1$s марта</string>
    <string name="april">%1$s апреля</string>
    <string name="may">%1$s мая</string>
    <string name="june">%1$s июня</string>
    <string name="july">%1$s июля</string>
    <string name="august">%1$s августа</string>
    <string name="september">%1$s сентября</string>
    <string name="october">%1$s октября</string>
    <string name="november">%1$s ноября</string>
    <string name="december">%1$s декабря</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="you_really_delete_transaction">Вы действительно хотите удалить запись?</string>
    <string name="delete_transaction">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="general_score">Общий баланс</string>
    <string name="general_income">Общий доход</string>
    <string name="general_consumption">Общий расход</string>
    <string name="empty_wallets">У вас пока нет созданных кошельков</string>
    <string name="checked_category">Выбранная категория</string>
    <string name="icon_category">Иконка категории</string>
    <string name="check_category">Выберите категорию</string>
    <string name="create_transaction">Создать транзакцию</string>
    <string name="main">Основные</string>
    <string name="sum">Сумма</string>
    <string name="type">Тип</string>
    <string name="category">Категория</string>
    <string name="date">Дата</string>
    <string name="imagine_name">Придумайте название</string>
    <string name="title_wallet">Название кошелька</string>
    <string name="new_wallet">Новый кошелек</string>
    <string name="create_wallet">Создать кошелек</string>
    <string name="title">Название</string>
    <string name="add_wallet">Создать кошелек</string>
    <string name="currency">Валюта</string>
    <string name="create_category">Создать категорию</string>
    <string name="icon">Иконка</string>
    <string name="ask_color">Задать цвет</string>
    <string name="limit_not_install">Лимит не установлен</string>
    <string name="RUB">Руссийский рубль (RUB)</string>
    <string name="russian_rub">Российский рубль</string>
    <string name="choose_color">Выберите цвет</string>
    <string name="title_category">Название категории</string>
    <string name="category1">Категория1</string>
    <string name="unknown_error">Что-то пошло не так</string>
    <string name="internet_error">Нет соединения с интернетом</string>
    <string name="server_error">Ошибка с сервером</string>
    <string name="spending_limit">Лимит на траты</string>
    <string name="save">Сохранить</string>
    <string name="you_exceeded_limit">Вы превысили лимит по тратам</string>
    <string name="auth_error">Ошибка при регистрации</string>
    <string name="eur">Eвро</string>
    <string name="rub">Российский рубль</string>
    <string name="usd">Доллар США</string>
    <string name="chf">Швейцарские франки</string>
    <string name="you_really_delete_wallet">Вы действительно хотите удалить кошелек?</string>
    <string name="by_team">By Android Team</string>
</resources>
